# isb

./: .gitignore  LICENSE  README.md  code.py  const.py  decode.py  encrypted_text.txt  file.py  final_text.txt  freq.json  frequency_analysis.json  functions.py  input.txt  key.json  key.txt  key2.json  main.py  my_freq.json  output.txt  output2.txt  report.txt  requirements.txt  res2.txt  settings.json  settings2.json  task2.txt  task2Key.json
lab_2/: .gitignore  CMakeLists.txt  Generator.java  NIST.py  NIST_TESTS.py  NIST_tests.py  NIST_tests_results.txt  NistTest.py  README copy.md  README.md  RandomBitSequence.java  RandomSequenceGenerator.cpp  RandomSequenceGenerator.java  Report.txt  Solution.java  Test.py  Work_Report.docx  binary_sequences.json  binary_sequency.json  c_generator.cpp  constants.py  consts.py  cpp_generator.cpp  creat_random.cpp  file_handler.py  file_util.py  file_work.py  functions.py  genc.cpp  generator.cpp  generator.java  generator_c.cc  generator_for_java.java  generator_java.java  input.json  java_generator.java  json_reader.py  lab2.py  lab_results.md  main.py  (+33 more)
lab_2/Solution/: output.json
lab_2/Task_1/: Random_seq_cpp.txt  Random_seq_java.txt  main.cpp  main.java
lab_2/Task_2/: NIST_tests.py
lab_2/generates_binary/: constants.py  genarate_cpp.cpp  generate_java.java
lab_2/generators/: cxx_generator.cpp  generator.cpp  generator.java  generator_c.cpp  generator_j.java  java_generator.java
lab_2/genetator/: RandomGeneratorC.cc  RandomGeneratorJava.java
lab_2/lab__2/: result.txt  result_tests.md  sequence.json  setting.json  (+2 more)
(+649 files in other folders)
